force-app/common/utils/fls-override/objects/GPMS_Backup_Config__mdt/GPMS_Backup_Config__mdt.object-meta.xml
<CustomObject>
    <description>277032: Used by PermissionSetsManager for Providing Read FLS on a given Permission Set</description>
    <label>GPMS Backup Config</label>
    <pluralLabel>GPMS Backup Config</pluralLabel>
</CustomObject>