force-app/common/utils/fls-override/objects/GPMS_Backup_Config__mdt/fields/Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Field_Names__c</fullName>
    <description>Comma separated fields for query and DML</description>
    <label>Field Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>