force-app/common/utils/fls-override/objects/GPMS_Backup_Config__mdt/fields/IsCDCRequired__c.field-meta.xml
<CustomField>
    <fullName>IsCDCRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable CDC, if TRUE</description>
    <label>IsCDCRequired</label>
    <type>Checkbox</type>
</CustomField>