force-app/common/utils/fls-override/objects/GPMS_Backup_Config__mdt/fields/Object_Description__c.field-meta.xml
<CustomField>
    <fullName>Object_Description__c</fullName>
    <description>Object Description</description>
    <label>Object Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>