force-app/common/utils/fls-override/objects/GPMS_Backup_Config__mdt/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <description>Object label as displayed on the UI</description>
    <label>Object Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>