force-app/common/utils/fls-override/objects/GPMS_Backup_Config__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Indicates the Name of the object as the MasterLabel field length can accommodate only 40 chars. This allows for __c or __mdt to be included</description>
    <label>Object Name</label>
    <length>45</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>