force-app/common/utils/fls-override/objects/GPMS_Backup_Config__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard-Platform</fullName>
                <default>true</default>
                <label>Standard-Platform</label>
            </value>
            <value>
                <fullName>Standard-PSS</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Platform Event</fullName>
            </value>
            <value>
                <fullName>Custom Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>