force-app/common/utils/fls-override/objects/GPMS_Backup_Config__mdt/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <label>Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common</fullName>
                <default>true</default>
                <label>Common</label>
            </value>
            <value>
                <fullName>GPMS</fullName>
            </value>
            <value>
                <fullName>QISR</fullName>
            </value>
            <value>
                <fullName>QFR</fullName>
            </value>
            <value>
                <fullName>PET</fullName>
            </value>
            <value>
                <fullName>Omni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>